# pytempl

./: LICENSE  README.md  main.py  nexios_sample.py  pyproject.toml  sample.py  sample.pytempl  ssg_sample.py  ssr_sample.py
.github/workflows/: deploy-docs.yaml
docs/: api-examples.md  components.md  conditionals.md  examples.md  getting-started.md  index.md  interpolation.md  loops.md  markdown-examples.md  package.json  scripts.md
docs/.vitepress/: config.ts  pytempl-lang.js
docs/.vitepress/plugins/: pytempl-highlight.js
editors/vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
editors/vscode/syntaxes/: pytempl.tmLanguage.json
examples/: .gitignore  client.py  client.pytempl  demo.py  demo.pytempl  directives.py  directives.pytempl  sample.py
examples/blog/pages/: about.py  index.html  index.pytempl
examples/ssg/: layout.py  layout.pytempl
examples/ssg/pages/: about.html  about.py  about.pytempl  index.py  index.pytempl
templ/: engine.py  grammar.py  transformer.py
templ/ast/: components.py  csr.py
