[project]
name = "pytempl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.2.2",
    "python-minifier>=3.0.0",
    "ruff-api>=0.1.0",
]

[dependency-groups]
dev = ["nexios>=2.11.3"]

[tool.setuptools]
py-modules = ["templ"]
